packages/typ/tests/fixtures/diagnostics/0968_mli_nested_path_zeroary_overapplied_02.mli
module Outer_beta : sig
  module Inner : sig
    type t
  end
end

val x_beta : int Outer_beta.Inner.t
